<resources>
    <string name="app_name">CSCB07 Project</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user_name">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to Itinerary Search-->
    <string name="search_itineraries">Search available itineraries</string>
    <string name="get_itinerary_data">Search all available itineraries:</string>

    <!-- Strings related to Flight Search-->
    <string name="get_flight_data">Search all available flights:</string>
    <string name="search_flights">Search available flights</string>
    <string name="departure_date">Departure Date YYYY-MM-DD</string>
    <string name="travel_origin">Travel Origin</string>
    <string name="travel_destination">Travel Destination</string>
    <string name="sort">Sort: </string>
    <string name="sort_by_time">by time</string>
    <string name="sort_by_cost">by cost</string>

    <!-- Strings related to Activity Titles-->
    <string name="title_activity_main">CSCB07 - Flight Booking Application</string>
    <string name="title_activity_client">Client</string>
    <string name="title_activity_search_flights">Search Flights</string>
    <string name="title_activity_view_flights">View Flights</string>
    <string name="title_activity_admin">Administrator</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_search_itineraries">Search Flight Itineraries</string>
    <string name="title_activity_view_itineraries">Itineraries</string>
    <string name="title_activity_view_profile">Client Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_upload_password">Upload Password Data</string>
    <string name="title_activity_upload_flight">Upload Flight Data</string>
    <string name="title_activity_upload_client">Upload Client Data</string>
    <string name="title_activity_add_flight">Add Flight Information</string>
    <string name="title_activity_admin_view_client_profile">View/Edit Client Profile</string>
    <string name="title_activity_admin_book_flight">Book Client Flight</string>
    <string name="title_activity_admin_book_flight_itinerary">Book Client Flight Itinerary</string>
    <string name="title_activity_view_flight_info">View/Edit Flight Info</string>
    <string name="title_activity_admin_view_booked_client_itineraries">
        View Booked Client Itineraries</string>
    <string name="title_activity_view_booked_client_itineraries">View Booked Itineraries</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>

    <!-- Strings related to Admin -->
    <string name="upload_flight">Upload Flights</string>
    <string name="upload_pass">Upload Passwords</string>
    <string name="add_flight">add Flight</string>
    <string name="flight">Choose the file to upload for flights</string>
    <string name="client">Choose the file to upload for clients</string>
    <string name="pass">Choose the file to upload for Passwords</string>
    <string name="upload_client">Upload Clients</string>
    <string name="save">Save</string>
    <string name="view_edit_client">View/Edit Client Profile</string>
    <string name="view_edit_flight">View/Edit Flight</string>
    <string name="view_booked_client_itineraries">View Booked Client Itineraries</string>

    <!-- Strings related to Client -->
    <string name="upload_Info">Upload Information</string>
    <string name="profile">View/Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="view_booked_itineraries">View Booked Itineraries</string>

    <!-- Strings related to Register Page -->
    <string name="register">Register</string>
    <string name="credit_card">Credit Card Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="credit_card_expiry_date">Credit Card Expiry Date</string>

    <!-- Strings related to AddFlight Page -->
    <string name="add_flight_obj">Add/Update Flight</string>
    <string name="flight_number">Flight Number</string>
    <string name="departure_date_time">Departure: YYYY-MM-DD HH:MM</string>
    <string name="arrival_date_time">Arrival: YYYY-MM-DD HH:MM</string>
    <string name="airline">Airline</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="price">Price</string>
    <string name="num_seats">Number of Seats</string>

    <!-- Strings related to View/Edit Flight Page -->
    <string name="show_flight_number">Flight Number: </string>
    <string name="show_departure_date_time">Departure: </string>
    <string name="show_arrival_date_time">Arrival: </string>
    <string name="show_airline">Airline: </string>
    <string name="show_origin">Origin: </string>
    <string name="show_destination">Destination: </string>
    <string name="show_price">Price: </string>
    <string name="show_num_seats">Number of Seats: </string>

    <!-- String related to BookFlights and BookFlightItineraries -->
    <string name="book_flight">Book FLight</string>
    <string name="book_flight_itinerary">Book Flight Itinerary</string>
    <string name="flight_information">Travel Details</string>
    <string name="flight_itinerary_information"> Itinerary Details</string>

    <!-- String related to BookFlights and EditProfile/ViewProfile -->
    <string name="show_lastname">"Last Name: "</string>
    <string name="show_firstname">"First Name: "</string>
    <string name="show_email">"Email: "</string>
    <string name="show_address">"Billing Address: "</string>
    <string name="show_card">"Credit Card Number: "</string>
    <string name="show_date">"Credit Card Expiry Date: "</string>
    <string name="show_username">"Username: "</string>


</resources>
