<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_register"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radio_client">
        <RadioButton
            android:id="@+id/radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_admin"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_client"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/register_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_user_name"
        />

    <EditText
        android:id="@+id/register_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:password="true"
        />

    <EditText
        android:id="@+id/register_first_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        />

    <EditText
        android:id="@+id/register_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        />

    <EditText
        android:id="@+id/register_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credit_card"
        android:inputType="phone"
        android:maxLength="16"
        android:digits="0123456789"
        />

    <EditText
        android:id="@+id/register_credit_card_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credit_card_expiry_date"
        />

    <Button
        android:id="@+id/register"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:onClick="register"
        />

</LinearLayout>
</ScrollView>
</LinearLayout>