<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.AddFlightActivity"
        tools:showIn="@layout/activity_add_flight"
        android:orientation="vertical">

    <EditText
        android:id="@+id/flight_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flight_number"
        />

    <EditText
        android:id="@+id/departure_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/departure_date_time"
        />

    <EditText
        android:id="@+id/arrival_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arrival_date_time"
        />

    <EditText
        android:id="@+id/airline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/airline"
        />

    <EditText
        android:id="@+id/origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/origin"
        />

    <EditText
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination"
        />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        />

    <EditText
        android:id="@+id/num_seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_seats"
        />

    <Button
        android:id="@+id/add_flight"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_flight_obj"
        android:textStyle="bold"
        android:onClick="addFlight"/>

    </LinearLayout>
</ScrollView>
</LinearLayout>