<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:showIn="@layout/activity_edit_profile"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".activities.EditProfileActivity"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <TextView
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_lastname"
                />

            <EditText
                android:id="@+id/edit_last_name"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_firstname"
                />

            <EditText
                android:id="@+id/edit_first_names"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_email"
                />


            <EditText
                android:id="@+id/edit_email"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_address"
                />


            <EditText
                android:id="@+id/edit_address"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_card"
                />


            <EditText
                android:id="@+id/edit_credit_card_number"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_date"
                />

            <EditText
                android:id="@+id/edit_expiry_date"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/edit_save_profile"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                android:onClick="saveProfile"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
