<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="cs.b07.cscb07project.activities.ViewFlightInfoActivity"
            tools:showIn="@layout/activity_view_flight_info"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <Spinner
                android:id="@+id/view_edit_flight_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_flight_number"
                    />

                <TextView
                    android:id="@+id/view_edit_flight_number"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_departure_date_time"
                    />

                <EditText
                    android:id="@+id/view_edit_departure_date_time"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_arrival_date_time"
                    />

                <EditText
                    android:id="@+id/view_edit_arrival_date_time"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_airline"
                    />

                <EditText
                    android:id="@+id/view_edit_airline"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_origin"
                    />

                <EditText
                    android:id="@+id/view_edit_origin"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_destination"
                    />

                <EditText
                    android:id="@+id/view_edit_destination"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_price"
                    />

                <EditText
                    android:id="@+id/view_edit_price"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_num_seats"
                    />

                <EditText
                    android:id="@+id/view_edit_num_seats"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/admin_edit_flight"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textStyle="bold"
                android:onClick="adminEditFlight"/>

            <Button
                android:id="@+id/admin_save_flight"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                android:onClick="adminSaveFlight"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
